--- a/vercel.json
+++ b/vercel.json
@@ -10,23 +10,9 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "https://sas-i5ji.onrender.com/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
   "env": {
     "NODE_ENV": "production",
-    "VITE_API_URL": "https://sas-i5ji.onrender.com"
+    "VITE_API_URL": "https://sap-technologies-ug.onrender.com"
   },
   "build": {
     "env": {
@@ -37,6 +23,10 @@
   "outputDirectory": "sap-technologies/dist",
   "framework": "vite",
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://sap-technologies-ug.onrender.com/api/$1"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
