Fix Vercel deployment: Use rootDirectory instead of cd commands
- Set rootDirectory to 'sap-technologies'
- Simplified build/install/dev commands to run from root directory
- Output directory set to 'dist' relative to rootDirectory
- This should resolve the 'No Output Directory named dist found' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "framework": "vite",
-  "buildCommand": "cd sap-technologies; npm run build",
-  "outputDirectory": "sap-technologies/dist",
-  "installCommand": "cd sap-technologies; npm install",
-  "devCommand": "cd sap-technologies; npm run dev",
+  "rootDirectory": "sap-technologies",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "devCommand": "npm run dev",
   "env": {
     "NODE_ENV": "production",
     "VITE_API_URL": "https://sap-technologies-ug.onrender.com"
