--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
   "framework": "vite",
-  "rootDirectory": "sap-technologies",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev",
+  "buildCommand": "cd sap-technologies && npm run build",
+  "outputDirectory": "sap-technologies/dist",
+  "installCommand": "cd sap-technologies && npm install",
+  "devCommand": "cd sap-technologies && npm run dev",
   "env": {
     "NODE_ENV": "production",
     "VITE_API_URL": "https://sap-technologies-ug.onrender.com"
