--- a/sap-technologies/package.json
+++ b/sap-technologies/package.json
@@ -34,5 +34,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
