Simplify Vercel config: Use npm ci for reliable builds
- Removed problematic root package.json wrapper approach
- Simplified vercel.json to use 'cd sap-technologies && npm ci && npm run build'
- npm ci provides faster, more reliable installs from package-lock.json
- Removed unnecessary installCommand and devCommand to let Vercel handle defaults
- This should resolve the 'Missing script: build' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
-  "framework": "vite",
-  "buildCommand": "cd sap-technologies && npm run build",
+  "buildCommand": "cd sap-technologies && npm ci && npm run build",
   "outputDirectory": "sap-technologies/dist",
-  "installCommand": "cd sap-technologies && npm install",
-  "devCommand": "cd sap-technologies && npm run dev",
   "env": {
     "NODE_ENV": "production",
     "VITE_API_URL": "https://sap-technologies-ug.onrender.com"
