--- a/server/.env.example
+++ b/server/.env.example
@@ -67,11 +67,12 @@ TWILIO_WHATSAPP_TO=whatsapp:+your_number
 # ===========================================
 
 # Frontend URLs (for CORS)
-CLIENT_URL=http://sap-technologies.com
+CLIENT_URL=https://sap-technologies.com
 PRODUCTION_CLIENT_URL=https://sap-technologies.com
 
 # Allowed Origins (comma-separated)
-ALLOWED_ORIGINS=http://sap-technologies.com,https://sap-technologies.com
+# Include both www and non-www variants, plus localhost for development
+ALLOWED_ORIGINS=https://sap-technologies.com,https://sap-technologies.com,https://www.sap-technologies.com,http://localhost:5174,www.sap-technologies.com,https://localhost:5174
 
 # ===========================================
 # 🔒 SSL/TLS CONFIGURATION (Production)
@@ -139,5 +140,3 @@ DEBUG=false
 ENABLE_SWAGGER=false
 ENABLE_CORS_ALL=false
 
-# Testing
-TEST_DATABASE_URL=mongodb://localhost:27017/sap-technologies-test
