--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "description": "Express API server for SAP Technologies website built with MVC architecture",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@whiskeysockets/baileys": "^6.7.20",
     "africastalking": "^0.7.7",
     "axios": "^1.12.2",
