chore: add SendGrid configuration to .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -43,7 +43,12 @@ BCRYPT_ROUNDS=12
 # 📧 EMAIL SERVICES (Optional)
 # ===========================================
 
-# Gmail SMTP Configuration
+# SendGrid Configuration (Production - Recommended)
+SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=noreply@sap-technologies.com
+SENDGRID_FROM_NAME=SAP Technologies
+
+# Gmail SMTP Configuration (Fallback/Development)
 GMAIL_USER=your_gmail@gmail.com
 GMAIL_PASS=your_gmail_app_password
 NOTIFY_EMAIL=notifications@sap-technologies.com
