feat: add Reply-To header to all email notifications
- Users can now reply to emails sent from noreply@sap-technologies.com
- All replies automatically go to saptechnologies256@gmail.com
- Added replyToEmail property to EmailService constructor
- Updated sendEmail() to always include Reply-To header
- Updated .env.example with documentation about Reply-To feature
- Tested and verified Reply-To functionality working correctly

--- a/server/.env.example
+++ b/server/.env.example
@@ -48,8 +48,10 @@ SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
 SENDGRID_FROM_EMAIL=noreply@sap-technologies.com
 SENDGRID_FROM_NAME=SAP Technologies
 
-# Gmail SMTP Configuration (Fallback/Development)
-GMAIL_USER=your_gmail@gmail.com
+# Gmail SMTP Configuration (Fallback/Development & Reply-To)
+# Note: GMAIL_USER is also used as the Reply-To address for all emails
+# Users can reply to this email even if emails come from noreply@sap-technologies.com
+GMAIL_USER=saptechnologies256@gmail.com
 GMAIL_PASS=your_gmail_app_password
 NOTIFY_EMAIL=notifications@sap-technologies.com
 
