feat: integrate Cloudinary for cloud image storage
- Installed cloudinary and multer-storage-cloudinary packages
- Created comprehensive cloudinary.js configuration
- Updated fileUpload.js to use Cloudinary when configured
- Automatic image optimization (WebP, quality, size)
- Global CDN delivery for fast loading
- Falls back to local storage if Cloudinary not configured
- Added Cloudinary configuration to .env.example
- Supports all upload types: products, services, partners, projects, etc.
- Includes helper functions: deleteFromCloudinary, uploadBuffer, etc.
- Fixes image loading issues in production (404 and CORS errors)

Benefits:
- Images served from Cloudinary CDN instead of server
- Automatic format conversion (WebP when supported)
- Automatic quality optimization
- No storage on server (saves disk space)
- Fast global delivery
- Image transformations available

--- a/server/.env.example
+++ b/server/.env.example
@@ -56,7 +56,7 @@ GMAIL_PASS=your_gmail_app_password
 NOTIFY_EMAIL=notifications@sap-technologies.com
 
 # Email Security
-EMAIL_FROM_NAME=SAP Technologies
+EMAIL_FROM_NAME=SAP Technologies uganda
 EMAIL_REPLY_TO=noreply@sap-technologies.com
 
 # ===========================================
@@ -68,6 +68,24 @@ TWILIO_SID=your_twilio_sid
 TWILIO_AUTH=your_twilio_auth_token
 TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
 TWILIO_WHATSAPP_TO=whatsapp:+your_number
+
+# ===========================================
+# ☁️  CLOUDINARY - CLOUD IMAGE STORAGE
+# ===========================================
+
+# Cloudinary Configuration (Recommended for Production)
+# Sign up at: https://cloudinary.com (Free tier: 25GB storage, 25GB bandwidth/month)
+# Get credentials from: Dashboard → Account Details
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Benefits:
+# - Automatic image optimization (WebP, quality, size)
+# - Global CDN delivery for fast loading
+# - No storage on server (saves disk space)
+# - Image transformations (resize, crop, filters)
+# - Reliable and scalable
 
 # ===========================================
 # 🌐 CLIENT & CORS CONFIGURATION
