--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.2.0",
+    "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
@@ -45,6 +46,7 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.9",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
