--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "dev:inspect": "nodemon --inspect src/app.js",
     "build": "npm install --production",
     "postinstall": "echo 'Backend dependencies installed successfully'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:performance": "node test-performance.js",
+    "cleanup-logs": "node cleanup-logs.js"
   },
   "keywords": [
     "express",
@@ -47,6 +49,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.9",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
