chore: remove documentation and test files, update .gitignore
- Remove all documentation files (AUTO-FILL-FEATURE.md, FEATURE-TEST-REPORT.md, IMAGE-ISSUE-FIXED.md)
- Remove all test files (test-*.js)
- Remove utility scripts (check-*, seed-*, verify-*, migrate-*, fix-*, update-*, assign-*, remove-*, reset-*, send-*, quick-*)
- Update .gitignore to exclude documentation and test files from future commits
- Keep only essential production code

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -45,10 +45,14 @@ test-*.js
 *.test.js
 *.spec.js
 
-# Documentation with sensitive data
+# Documentation files (keep only README.md)
 *-FIXED.md
+*-FEATURE.md
+*-REPORT.md
 IMAGE-*.md
 *-GUIDE-*.md
+AUTO-*.md
+FEATURE-*.md
 
 # Development utility scripts
 check-*.js
