--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "resend": "^6.1.3",
     "secure-random-password": "^0.2.3",
     "twilio": "^4.19.0",
     "validator": "^13.15.15",
