--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
     "resend": "^6.1.3",
     "secure-random-password": "^0.2.3",
     "twilio": "^4.19.0",
+    "ua-parser-js": "^1.0.41",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   },
