Add 24/7 keep-alive deployment package and UptimeRobot setup guide

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev:inspect": "nodemon --inspect src/app.js",
     "build": "npm ci --include=dev",
     "postinstall": "echo 'Backend dependencies installed successfully'",
-    "cleanup-logs": "node cleanup-logs.js"
+    "cleanup-logs": "node cleanup-logs.js",
+    "keep-alive": "node scripts/keep-alive-server.js"
   },
   "keywords": [
     "express",
